<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">new_vegis</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_b1">vegetable</string>
    <string name="main_b2">order</string>
    <string name="main_b3">Track Order</string>
   <string name="etext1">Email or Phone no.</string>
   <string name="etext2">password</string>
   <string name="btn1">Login</string>
   <string name="btn2">Clear</string>
   <string name="tview2">Signup</string>
   <string name="tview1">Forgot Password??</string>
   <string name="tview3">Signup</string>
   <string name="tview4">FirstName</string>
   <string name="tview5">Lastname</string>
   <string name="tview6">Email</string>
   <string name="tview7">Password</string>
   <string name="tview8">Re-enter password</string>

</resources>
